test/src/e2e_vm_tests/test_programs/should_pass/stdlib/fixed_point_test/src/main.sw
script;

use std::assert::assert;
use std::result::*;
use std::u128::*;
use std::fixed_point::*;

fn main() {

}
