test/src/e2e_vm_tests/test_programs/should_fail/import_non_item/src/main.sw
script;

use my_internal_mod;

fn main() {
    assert(true);
}
